<resources>
    <string name="app_name">score</string>
    <string name="textview1">TeamA</string>
    <string name="textview2">TeamB</string>
    <string name="ScoreA">0</string>
    <string name="ScoreB">0</string>
    <string name="button1">+1</string>
    <string name="button2">+2</string>
    <string name="button3">+3</string>
    <string name="undobtn">undo</string>
    <string name="restbutton">rest</string>
</resources>
